<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ScheduleEditActivity">

    <TextView
            android:text="@string/date_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="16dp"
            android:layout_marginStart="16dp" android:id="@+id/textView"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:id="@+id/titleEdit"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dateText" android:layout_marginTop="16dp" android:hint="@string/hint_msg"
            android:textSize="24sp"/>
    <Button
            android:text="@string/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/save" android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp"/>
    <Button
            android:text="@string/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/delete"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <TextView
            android:text="DATE"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:id="@+id/dateText" app:layout_constraintTop_toBottomOf="@+id/textView"
            android:layout_marginTop="8dp" android:textSize="18sp"/>
    <Button
            android:text="@string/date_time_select"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dateTime"
            android:layout_marginBottom="16dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/save" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toEndOf="@+id/delete" android:layout_marginStart="8dp"/>
    <TextView
            android:text="TIME"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/timeText" app:layout_constraintStart_toEndOf="@+id/dateText"
            app:layout_constraintHorizontal_bias="0.035" android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/titleEdit" android:layout_marginBottom="16dp"/>
    <Button
            android:text="@string/edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/edit" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/dateTime"/>
</androidx.constraintlayout.widget.ConstraintLayout>